--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <div class="list">
                 <ul id="list-toDos">
                     <!-- <li class="item">
-                        <i class="fas fa-circle-notch tick " job="complete"></i>
+                        <i class="fa fa-circle-notch tick " job="complete"></i>
                         <span id="toDo" class="">Wash Plate</span>
-                        <i class="fas fa-trash delete" job="delete"></i>
+                        <i class="fa fa-trash delete" job="delete"></i>
                     </li> -->
 
                 </ul>
             </div>
             <div class="addTodo">
-                <i class="fas fa-plus-circle circle"></i>
+                <i class="fa fa-plus-circle circle"></i>
                 <input type="text" placeholder="Add To-do ..." id="input">
             </div>
         </div>
