--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="list">
                 <ul id="list-toDos">
                     <!-- <li class="item">
-                        <i class="fa fa-circle-thin tick " job="complete"></i>
+                        <i class="fa fa-circle-o tick " job="complete"></i>
                         <span id="toDo" class="">Wash Plate</span>
                         <i class="fa fa-trash-o delete" job="delete"></i>
                     </li> -->
